bake-a-pi-web/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pi-web
  namespace: bake-a-pi
  labels:
    app: pi-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pi-web
  template:
    metadata:
      labels:
        app: pi-web
    spec:
      containers:
      - name: pi-graphql
        image: blueguse/pi-web:0.0.5
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "10Mi"
            cpu: "50m"
          limits:
            memory: "25Mi"
            cpu: "100m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 3
