bake-a-pi-web/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pi-web
  namespace: bake-a-pi
spec:
  selector:
    app: pi-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
