bake-a-pi-web/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pi-web
  namespace: bake-a-pi
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  tls:
  - hosts:
    - bake-a-pi.spunkyrocket.com
    secretName: bake-a-pi-spunkyrocket-tls
  rules:
  - host: bake-a-pi.spunkyrocket.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pi-web
            port:
              number: 80
